making css responsive

--- a/public/archive1.html
+++ b/public/archive1.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Archive - NoteIt</title>
     <link href="./output.css" rel="stylesheet">
+    <link href="./responsive.css" rel="stylesheet">
 </head>
 
 <body class="bg-amber-200" data-page="archive">
