--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
      <link href="./output.css" rel="stylesheet">
+    <link href="./responsive.css" rel="stylesheet">
 </head>
 <body class="bg-amber-200" data-page="home">
     <header class="h-25">
